# pg2015-code

./: .gitignore  CMakeLists.txt  README.md
bonez/: CMakeLists.txt
bonez/bonez/: common.cpp  common.hpp  stdafx.h  types.hpp
bonez/bonez/image/: Image.cpp  Image.hpp
bonez/bonez/maths/: BBox.hpp  common.hpp  constants.hpp  glm.hpp  maths.hpp  types.hpp
bonez/bonez/maths/mappings/: dual_paraboloid_mappings.hpp  hemispherical_mappings.hpp  image_mappings.hpp  paraboloid_mappings.hpp  spherical_mappings.hpp
bonez/bonez/opengl/: GLFlatShadingPass.cpp  GLFlatShadingPass.hpp  GLForwardFlatRenderPass.cpp  GLForwardFlatRenderPass.hpp  GLGBuffer.hpp  GLGBufferRenderPass.cpp  GLGBufferRenderPass.hpp  GLImageRenderer.cpp  GLImageRenderer.hpp  GLScene.cpp  GLScene.hpp  GLScreenFramebuffer.cpp  GLScreenFramebuffer.hpp  GLShaderManager.cpp  GLShaderManager.hpp  opengl.cpp  opengl.hpp
bonez/bonez/opengl/cube_mapping/: GLCubeMapContainer.hpp  GLCubeMapRenderPass.hpp  GLCubeMappingMVPMatrixBufferComputePass.hpp  GLVirtualCubeMapContainer.hpp  GLVirtualCubeMapRenderPass.hpp
bonez/bonez/opengl/debug/: GLDebugObject.cpp  GLDebugObject.hpp  GLDebugRenderer.cpp  GLDebugRenderer.hpp  GLDebugStream.cpp  GLDebugStream.hpp
bonez/bonez/opengl/lighting/: GLDirectLightShadingPass.hpp  GLPointLightsData.hpp
bonez/bonez/opengl/shaders/: debug.fs  debug.vs  debugDrawPoints.fs  debugDrawPoints.vs  debugLines.vs  deferredShadingPass.vs  flatDeferredShadingPass.fs  flatForwardPass.fs  forwardPass.vs  geometryPass.fs  geometryPass.vs  image.fs  image.vs  imageArray.fs  utils.xs
bonez/bonez/opengl/shaders/cube_mapping/: buildCubeMappingMVPMatrixBuffer.cs  cubeMapSphereTexture.xs  cubeMapUtils.xs  cubeMapping.fs  cubeMapping.gs  cubeMapping.vs  cubeMapsToDualParaboloidMapBuffers.cs  cubeMapsToSphericalMapBuffers.cs  cubeMapsToSphericalMaps.cs  drawCubeMap.fs  virtualCubeMapSphereTexture.xs  virtualCubeMapping.gs
bonez/bonez/opengl/shaders/shadow_mapping/: cubeShadowMapping.gs  cubeShadowMapping.vs  drawCubeShadowMap.fs
bonez/bonez/opengl/utils/: GLBindlessTexture.hpp  GLBuffer.hpp  GLCubeFramebuffer.hpp  GLFramebuffer.hpp  GLNVShaderBufferLoad.hpp  GLObject.hpp  GLProgram.hpp  GLQuery.cpp  GLQuery.hpp  GLShader.hpp  GLState.hpp  GLTexture.hpp  GLUniform.hpp  GLVertexArray.hpp  GLutils.hpp  glGet.cpp  glGet.hpp
bonez/bonez/parsing/: parsing.cpp  parsing.hpp
bonez/bonez/rendering/: Framebuffer.hpp  OfflineRenderManager.hpp  RenderModule.cpp  RenderModule.hpp  Renderer.cpp  Renderer.hpp  RendererManager.cpp  RendererManager.hpp
bonez/bonez/rendering/renderers/: DirectImportanceSampleTilePartionning.hpp  GeometryRenderer.hpp  IGIRenderer.cpp  IGIRenderer.hpp  InstantRadiosityRenderer.cpp  InstantRadiosityRenderer.hpp  PathtraceRenderer.cpp  PathtraceRenderer.hpp  PrimaryRaysRenderer.hpp  RecursiveMISBDPTRenderer.cpp  RecursiveMISBDPTRenderer.hpp  SkeletonMappingRenderer.cpp  SkeletonMappingRenderer.hpp  TileProcessingRenderer.cpp  TileProcessingRenderer.hpp  UniformResamplingRecursiveMISBPTRenderer.cpp  UniformResamplingRecursiveMISBPTRenderer.hpp  VCMRenderer.cpp  VCMRenderer.hpp  paths.hpp  recursive_mis_bdpt.hpp
bonez/bonez/rendering/renderers/importance_caching/: BDPTImportanceCachingRenderer.cpp  BDPTImportanceCachingRenderer.hpp  GeorgievImportanceCache.cpp  GeorgievImportanceCache.hpp  GeorgievImportanceRecord.hpp  GeorgievImportanceRecordContainer.cpp  GeorgievImportanceRecordContainer.hpp  GeorgievPerDepthImportanceCache.cpp  (+3 more)
bonez/bonez/sampling/: DiscreteDistribution.hpp  Random.hpp  Sample.hpp  distribution1d.cpp  distribution1d.h  distribution2d.cpp  distribution2d.h  multiple_importance_sampling.hpp  patterns.hpp  shapes.cpp  shapes.hpp
bonez/bonez/scene/: ConfigManager.cpp  ConfigManager.hpp  Intersection.hpp  Ray.hpp  Scene.cpp  Scene.hpp  SceneGeometry.cpp  SceneGeometry.hpp  SurfacePoint.hpp  VoxelGrid.cpp  VoxelGrid.hpp
bonez/bonez/scene/lights/: AreaLight.cpp  AreaLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  EnvironmentLight.cpp  EnvironmentLight.hpp  Light.hpp  LightContainer.hpp  LightVisitor.hpp  PointLight.cpp  PointLight.hpp  PowerBasedLightSampler.cpp  PowerBasedLightSampler.hpp  VPLs.hpp
bonez/bonez/scene/raytracing/: RTScene.cpp  RTScene.hpp
bonez/bonez/scene/sensors/: Camera.hpp  EnvironmentCamera.hpp  HemisphereCamera.hpp  ParaboloidCamera.hpp  PixelSensor.hpp  ProjectiveCamera.cpp  ProjectiveCamera.hpp  Sensor.hpp  SurfacePointCamera.hpp
bonez/bonez/scene/shading/: BSDF.cpp  BSDF.hpp  Material.hpp  fresnel.hpp
bonez/bonez/scene/topology/: CurvilinearSkeleton.cpp  CurvilinearSkeleton.hpp  EmptySpaceVoxelMapping.cpp  EmptySpaceVoxelMapping.hpp  SkeletonLineSet.cpp  SkeletonLineSet.hpp  VSkelLoader.cpp  VSkelLoader.hpp
bonez/bonez/sys/: DebugLog.cpp  DebugLog.hpp  easyloggingpp.hpp  files.cpp  files.hpp  memory.hpp  threads.cpp  threads.hpp  time.cpp  time.hpp
bonez/bonez/utils/: ColorMap.cpp  ColorMap.hpp  CubeMapUtils.cpp  CubeMapUtils.hpp  DijkstraAlgorithm.hpp  Graph.hpp  Grid3D.hpp  HashGrid.hpp  KdTree.hpp  MultiDimensionalArray.hpp  UnionFind.hpp
bonez/bonez/utils/itertools/: Indexer.hpp  Range.hpp  iterator_extractor.hpp  itertools.hpp
bonez/bonez/viewer/: GUI.cpp  GUI.hpp  ViewController.cpp  ViewController.hpp  Viewer.cpp  Viewer.hpp  WindowManager.cpp  WindowManager.hpp
bonez/bonez/viewer/imgui/: imconfig.h  imgui_user.inl
bonez/bonez/voxskel/: CubicalComplex3D.cpp  CubicalComplex3D.hpp  GLCubicalComplex.cpp  GLCubicalComplex.hpp  GLCubicalComplexFaceListRenderer.cpp  GLCubicalComplexFaceListRenderer.hpp  GLCubicalComplexRenderer.cpp  GLCubicalComplexRenderer.hpp  GLVoxelFramebuffer.cpp  GLVoxelFramebuffer.hpp  GLVoxelGridRenderer.cpp  GLVoxelGridRenderer.hpp  GLVoxelizer.cpp  GLVoxelizer.hpp  GLVoxelizerTripiana2009.cpp  GLVoxelizerTripiana2009.hpp  MinTree.cpp  MinTree.hpp  MinTreeNajmanCouprie2006.hpp  ThinningProcessDGCI2013.cpp  ThinningProcessDGCI2013.hpp  ThinningProcessDGCI2013_2.cpp  ThinningProcessDGCI2013_2.hpp  VoxelBuffer.cpp  VoxelBuffer.hpp  discrete_functions.cpp  discrete_functions.hpp
(+48 files in other folders)
